# claude_neuro

./: .gitignore  NEX5LicenseDecoder.spec  NEX5LicenseGenerator.spec  NEX5SpikeLFPAnalyzer.spec  README.md  build_exe.bat  launch_gui.py  license_public_key.pem  pyproject.toml  run_gui.bat
.github/workflows/: pytest.yml
docs/changes/: 2026-03-25_initial_implementation.md
docs/plans/: 2026-03-25_batch_output_schema.md  2026-03-25_stability_and_batch_plan.md
docs/requirements/: 001_v1_scope.md
installer/: NEX5SpikeLFPAnalyzer.iss
offline_activation_kit/: .gitignore  README.md  __init__.py  activation.py  dialog.py  generator_app.py  integration_example.py  requirements.txt
src/nex5_analyzer/: __init__.py  app.py  build_support.py  cancellation.py  config.py  defaults.py  error_messages.py  export_naming.py  exporters.py  grouped_plv.py  licensing.py  models.py  plotting.py  testing.py
src/nex5_analyzer/analysis/: __init__.py  batch.py  common.py  lfp.py  lfp_lfp.py  registry.py  runtime.py  service.py  spike.py  spike_lfp.py  tree.py  validation.py
src/nex5_analyzer/gui/: __init__.py  analysis_dialog.py  (+8 more)
tests/: conftest.py  test_analysis.py  test_batch_backend.py  test_build_support.py  test_config.py  test_export.py  test_grouped_plv.py  test_grouped_plv_gui.py  test_gui_smoke.py  test_licensing.py  test_loader.py  test_real_samples.py  test_region_mapping_dialog.py  test_validation.py
tools/: build_clean_release.ps1  generate_license_keypair.py  generate_offline_license.py  inspect_license_artifact.py  license_decoder_app.py  license_generator_app.py
(+1 files in other folders)
